--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "go.buildTags": "dev"
+    "go.buildTags": "dev",
+    "typescript.disableAutomaticTypeAcquisition": false,
+    "typescript.check.npmIsInstalled": false,
+    "js/ts.implicitProjectConfig.target": "ES2020",
+    "typescript.implementationsCodeLens.enabled": true,
+    "typescript.workspaceSymbols.scope": "currentProject",
+    "javascript.format.semicolons": "insert",
+    "typescript.format.semicolons": "insert"
 }
