--- a/modd.conf
+++ b/modd.conf
@@ -1,12 +1,8 @@
-pkg/lib/**/*.go pkg/cli/docker-graph/**/*.go {
-  daemon +sigterm: go run -tags dev ./pkg/cli/docker-graph -debug -bind localhost:8090
+bunfig.toml {
+  prep: bun bun
+  daemon: bun dev --port=8100
 }
 
-# app/package.json {
-#   indir: app
-#   daemon: pwd && bun run dev
-# }
-
-{
-  daemon: devd -A "0.0.0.0" -p 8080 -Ctl /api/=http://localhost:8090/api/ app/public
+src/go/**/*.go {
+  daemon +sigterm: go run -tags dev ./src/go/cli/docker-graph -debug -bind localhost:8080 -devProxy http://localhost:8100
 }
