--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    "lib": ["ES2021", "DOM"],
+    "lib": [
+      "ES2021",
+      "DOM"
+    ],
     "module": "node16",
-    "target": "ES2020",
-    // "bun-types" is the important part
-    "types": ["bun-types"]
+    "target": "ES2020"
   }
 }
